class_file/snapshots/custom-inheritance-call_parent_method-CallParentMethodMain$Child.class.snap
---
source: class_file/src/lib.rs
expression: display
---
class inheritance.call_parent_method.CallParentMethodMain$Child extends inheritance.call_parent_method.CallParentMethodMain$Parent
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #7                       //inheritance/call_parent_method/CallParentMethodMain$Child
  super_class: #2                      //inheritance/call_parent_method/CallParentMethodMain$Parent
  interfaces: 0, fields: 0, methods: 1, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // inheritance/call_parent_method/CallParentMethodMain$Parent."<init>":()V
   #2 = Class              #4               // inheritance/call_parent_method/CallParentMethodMain$Parent
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               inheritance/call_parent_method/CallParentMethodMain$Parent
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // inheritance/call_parent_method/CallParentMethodMain$Child
   #8 = Utf8               inheritance/call_parent_method/CallParentMethodMain$Child
   #9 = Utf8               Code
  #10 = Utf8               LineNumberTable
  #11 = Utf8               LocalVariableTable
  #12 = Utf8               this
  #13 = Utf8               Linheritance/call_parent_method/CallParentMethodMain$Child;
  #14 = Utf8               SourceFile
  #15 = Utf8               CallParentMethodMain.java
  #16 = Utf8               NestHost
  #17 = Class              #18              // inheritance/call_parent_method/CallParentMethodMain
  #18 = Utf8               inheritance/call_parent_method/CallParentMethodMain
  #19 = Utf8               InnerClasses
  #20 = Utf8               Parent
  #21 = Utf8               Child
{
  inheritance.call_parent_method.CallParentMethodMain$Child();
    descriptor: ()V
    flags: (0x0000) 
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method inheritance/call_parent_method/CallParentMethodMain$Parent."<init>":()V
         4: return                  
      LineNumberTable:
        line 12: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Linheritance/call_parent_method/CallParentMethodMain$Child;
}
SourceFile: "CallParentMethodMain.java"
NestHost: class inheritance/call_parent_method/CallParentMethodMain
InnerClasses:
  static #20= #2 of #17;                      // Parent=class inheritance/call_parent_method/CallParentMethodMain$Parent of class inheritance/call_parent_method/CallParentMethodMain
  static #21= #7 of #17;                      // Child=class inheritance/call_parent_method/CallParentMethodMain$Child of class inheritance/call_parent_method/CallParentMethodMain
