class_file/snapshots/custom-inheritance-call_parent_method-CallParentMethodMain$Parent.class.snap
---
source: class_file/src/lib.rs
expression: display
---
class inheritance.call_parent_method.CallParentMethodMain$Parent 
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #8                       //inheritance/call_parent_method/CallParentMethodMain$Parent
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 1, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Fieldref           #8.#9            // inheritance/call_parent_method/CallParentMethodMain$Parent.parentId:I
   #8 = Class              #10              // inheritance/call_parent_method/CallParentMethodMain$Parent
   #9 = NameAndType        #11:#12          // parentId:I
  #10 = Utf8               inheritance/call_parent_method/CallParentMethodMain$Parent
  #11 = Utf8               parentId
  #12 = Utf8               I
  #13 = Utf8               ConstantValue
  #14 = Integer            42
  #15 = Utf8               Code
  #16 = Utf8               LineNumberTable
  #17 = Utf8               LocalVariableTable
  #18 = Utf8               this
  #19 = Utf8               Linheritance/call_parent_method/CallParentMethodMain$Parent;
  #20 = Utf8               getParentId
  #21 = Utf8               ()I
  #22 = Utf8               SourceFile
  #23 = Utf8               CallParentMethodMain.java
  #24 = Utf8               NestHost
  #25 = Class              #26              // inheritance/call_parent_method/CallParentMethodMain
  #26 = Utf8               inheritance/call_parent_method/CallParentMethodMain
  #27 = Utf8               InnerClasses
  #28 = Utf8               Parent
{
  private final int parentId;
    descriptor: I
    flags: (0x0012) ACC_PRIVATE, ACC_FINAL
    ConstantValue: int 42
  
  inheritance.call_parent_method.CallParentMethodMain$Parent();
    descriptor: ()V
    flags: (0x0000) 
    Code: 
      stack=2, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: aload_0                 
         5: bipush        42                
         7: putfield      #7                  // Field parentId:I
        10: return                  
      LineNumberTable:
        line 4: 0
        line 5: 4
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       11     0  this   Linheritance/call_parent_method/CallParentMethodMain$Parent;
  
  public int getParentId();
    descriptor: ()I
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: bipush        42                
         2: ireturn                 
      LineNumberTable:
        line 8: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        3     0  this   Linheritance/call_parent_method/CallParentMethodMain$Parent;
}
SourceFile: "CallParentMethodMain.java"
NestHost: class inheritance/call_parent_method/CallParentMethodMain
InnerClasses:
  static #28= #8 of #25;                      // Parent=class inheritance/call_parent_method/CallParentMethodMain$Parent of class inheritance/call_parent_method/CallParentMethodMain
