class_file/snapshots/custom-inheritance-constructor_chain-ConstructorChainMain.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class inheritance.constructor_chain.ConstructorChainMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #16                      //inheritance/constructor_chain/ConstructorChainMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // inheritance/constructor_chain/ConstructorChainMain$Child
   #8 = Utf8               inheritance/constructor_chain/ConstructorChainMain$Child
   #9 = Methodref          #7.#10           // inheritance/constructor_chain/ConstructorChainMain$Child."<init>":(I)V
  #10 = NameAndType        #5:#11           // "<init>":(I)V
  #11 = Utf8               (I)V
  #12 = Fieldref           #7.#13           // inheritance/constructor_chain/ConstructorChainMain$Child.id:I
  #13 = NameAndType        #14:#15          // id:I
  #14 = Utf8               id
  #15 = Utf8               I
  #16 = Class              #17              // inheritance/constructor_chain/ConstructorChainMain
  #17 = Utf8               inheritance/constructor_chain/ConstructorChainMain
  #18 = Utf8               Code
  #19 = Utf8               LineNumberTable
  #20 = Utf8               LocalVariableTable
  #21 = Utf8               this
  #22 = Utf8               Linheritance/constructor_chain/ConstructorChainMain;
  #23 = Utf8               main
  #24 = Utf8               ([Ljava/lang/String;)V
  #25 = Utf8               args
  #26 = Utf8               [Ljava/lang/String;
  #27 = Utf8               c
  #28 = Utf8               Linheritance/constructor_chain/ConstructorChainMain$Child;
  #29 = Utf8               v
  #30 = Utf8               SourceFile
  #31 = Utf8               ConstructorChainMain.java
  #32 = Utf8               NestMembers
  #33 = Class              #34              // inheritance/constructor_chain/ConstructorChainMain$Parent
  #34 = Utf8               inheritance/constructor_chain/ConstructorChainMain$Parent
  #35 = Utf8               InnerClasses
  #36 = Utf8               Child
  #37 = Utf8               Parent
{
  public inheritance.constructor_chain.ConstructorChainMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Linheritance/constructor_chain/ConstructorChainMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=3, locals=3, args_size=1
         0: new           #7                  // class inheritance/constructor_chain/ConstructorChainMain$Child
         3: dup                     
         4: bipush        42                
         6: invokespecial #9                  // Method inheritance/constructor_chain/ConstructorChainMain$Child."<init>":(I)V
         9: astore_1                
        10: aload_1                 
        11: getfield      #12                 // Field inheritance/constructor_chain/ConstructorChainMain$Child.id:I
        14: istore_2                
        15: return                  
      LineNumberTable:
        line 14: 0
        line 15: 10
        line 16: 15
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       16     0  args   [Ljava/lang/String;
          10        6     1  c      Linheritance/constructor_chain/ConstructorChainMain$Child;
          15        1     2  v      I
}
SourceFile: "ConstructorChainMain.java"
NestMembers:
  inheritance/constructor_chain/ConstructorChainMain$Child
  inheritance/constructor_chain/ConstructorChainMain$Parent
InnerClasses:
  static #36= #7 of #16;                      // Child=class inheritance/constructor_chain/ConstructorChainMain$Child of class inheritance/constructor_chain/ConstructorChainMain
  static #37= #33 of #16;                     // Parent=class inheritance/constructor_chain/ConstructorChainMain$Parent of class inheritance/constructor_chain/ConstructorChainMain
